# ansible-playbooks

./: .ansible-lint  .gitattributes  .gitignore  .yamllint.yml  Pipfile  adhoc_configure_baremetal.yml  adhoc_configure_ssh.yml  adhoc_configure_telegraf.yml  adhoc_proxmox_test.yml  adhoc_string_test.yml  adhoc_update_users.yml  ansible.cfg  audit_grab_facts.yml  audit_grab_proxmox_guests.yml  audit_printfacts.yml  build_bigbilly.yml  build_cert.yml  build_code.yml  build_df.yml  build_dpshub.yml  build_elk.yml  build_ent copy.yml  build_ent.yml  build_generic_workstation.yml  build_graf.yml  build_headscale.yml  build_helios64.yml  build_ifdb.yml  build_jf.yml  build_kismnas.yml  build_linux_workstation.yml  build_llama.yml  build_macos_workstation.yml  build_myr.yml  build_nix_workstation.yml  build_opensense.yml  build_podc-dr.yml  build_podc-test.yml  build_podc.yml  build_podctest.yml  (+50 more)
adhoc/: 1gbswap.yml  getfacts.yml  rebootguests.yml  remove.yml  shutdownguests.yml  updateall.yml
archivepodcast/: ansible.cfg  archivepodcast.yml  nginx.conf
callback_plugins/: yamlmod.py
collections/: requirements.yml
ifdb/: onboard_ifdb.yml
init/: init_linux.sh  init_linux_change_group_id.sh  init_linux_change_user_id.sh  init_win.ps1
inventory/: 001-test.yml  log_packages_diff.txt  main.yml  podc_hcloud.yml  podc_test_hcloud.yml  stream_hcloud.yml
nginx/: nginx-podc.conf  nginx-rproxy-index.html
onboard/: init.sh  init_changeuid.sh  onboard.yml  onboard_autism.yml  onboard_autism_factorio.yml  onboard_autism_minecraft.yml  onboard_autismfactory.yml  onboard_ent.yml  (+15 more)
(+1061 files in other folders)
