[tool.poetry]
name = "ansible-playbooks"
description = "Kieran's ansible playbooks, for his homelab"
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = { version = "*", markers = "platform_system != 'Windows'" }
pywinrm = "*"
proxmoxer = "^2.0.1"
httpx = "*"
bitwarden-sdk = "*"
python-dateutil = "*"
requests = "*"

[tool.poetry.group.test.dependencies]
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
