[project]
name = "ansible-playbooks"
version = "0.1.0"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ansible",           # https://endoflife.date/ansible
    "ansible-core<2.21", # https://endoflife.date/ansible-core Only restrict on this
    "proxmoxer",
    "httpx",
    "bitwarden-sdk",
    "python-dateutil",
    "requests",
    "ansible-lint",
]
